Displaying qr code in share popup

--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>AI Mind Map Maker - Generate Mind Map | Mind Map Wizard</title>
+        <title>Mind Map Wizard</title>
         <meta
             name="description"
             content="AI Mind Maps: Generate mind maps in seconds just by typing in a topic. Free, no sign-up">
@@ -50,6 +50,7 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
      crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     </head>
     <body>
         <div class="banner-outage">
@@ -546,6 +547,29 @@
         Clear History</a>
 </div>
 
+<!-- Left Sidebar -->
+<div id="leftSidebar" class="left-sidebar">
+    <div class="left-sidebar-header"></div>
+    <div class="left-sidebar-content">
+        <div id="leftSidebarMindmapList" class="sidebar-mindmap-list">
+            <!-- Mind map items will be loaded here -->
+        </div>
+        <div class="sidebar-boxlet">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
+                crossorigin="anonymous"></script>
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-client="ca-pub-8940556207214695"
+                data-ad-slot="3799641607"
+                data-ad-format="auto"
+                data-full-width-responsive="true"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        </div>
+    </div>
+</div>
+
 <div id="ratingPopup">
     <h3 style="margin: 0 0 8px; font-size: 16px; font-weight: 500;">Rate us!</h3>
     <form id="ratingForm">
@@ -563,30 +587,6 @@
         </div>
         <input type="hidden" name="source" value="Mind Map Wizard - Rate us!">
     </form>
-</div>
-
-<!-- Left Sidebar -->
-<div id="leftSidebar" class="left-sidebar">
-    <div class="left-sidebar-header"></div>
-    <div class="left-sidebar-content">
-        <div id="leftSidebarMindmapList" class="sidebar-mindmap-list">
-            <!-- Mind map items will be loaded here -->
-        </div>
-        <div class="sidebar-boxlet">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
-                crossorigin="anonymous"></script>
-            <!-- Sidebar Box Ad -->
-            <ins class="adsbygoogle"
-                style="display:block"
-                data-ad-client="ca-pub-8940556207214695"
-                data-ad-slot="3799641607"
-                data-ad-format="auto"
-                data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-        </div>
-    </div>
 </div>
 
 <script src="/new.js" defer="defer"></script>
