--- a/new.html
+++ b/new.html
@@ -40,17 +40,17 @@
 
         <link href="/OpenSans-ExtraBold.ttf" rel="stylesheet">
         <link rel="stylesheet" href="/styles/new.css">
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/d3@7.8.5"></script>
         <script src="https://cdn.jsdelivr.net/npm/markmap-lib@0.16.1"></script>
         <script src="https://cdn.jsdelivr.net/npm/markmap-view@0.16.0"></script>
         <script src="https://cdn.jsdelivr.net/npm/markmap-autoloader@0.16"></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
-     crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+        <script src="/user-survey.js"></script>
+
     </head>
     <body>
         <div class="banner-outage">
@@ -175,12 +175,7 @@
                     id="prompt"
                     placeholder="Visualize anything..."/>
                 <button id="generate-mindmap-btn" class="send-prompt-btn">
-                    <img
-                        src="/img/icons/send-icon.png"
-                        alt="Generate"
-                        height="26px"
-                        width="26px"
-                        class="send-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#FFFFFF"><path d="M166.67-179.67Q150-173 135-182.5T120-210v-193.33L428-480l-308-78v-192q0-18 15-27.5t31.67-2.83l640 269.33Q827-502 827-480t-20.33 31l-640 269.33Z"/></svg>
                 </button>
             </div>
 
@@ -253,8 +248,6 @@
             </div>
 
             <div class="input-wrapper-boxlet">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
-                            crossorigin="anonymous"></script>
                         <!-- Input Field Ad Box -->
                         <ins class="adsbygoogle"
                             style="display:block"
@@ -316,12 +309,7 @@
                         placeholder="https://www.youtube.com/watch..."
                         class="youtube-input">
                     <button id="youtube-generate-btn" class="youtube-send-btn">
-                        <img
-                            src="/img/icons/send-icon.png"
-                            alt="Generate"
-                            height="26px"
-                            width="26px"
-                            class="send-icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#FFFFFF"><path d="M166.67-179.67Q150-173 135-182.5T120-210v-193.33L428-480l-308-78v-192q0-18 15-27.5t31.67-2.83l640 269.33Q827-502 827-480t-20.33 31l-640 269.33Z"/></svg>
                     </button>
                 </div>
             </div>
@@ -555,8 +543,6 @@
             <!-- Mind map items will be loaded here -->
         </div>
         <div class="sidebar-boxlet">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8940556207214695"
-                crossorigin="anonymous"></script>
             <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-client="ca-pub-8940556207214695"
