--- a/new.html
+++ b/new.html
@@ -81,7 +81,7 @@
             </svg>
 
         </button>
-        <a href="/new.html" class="new-mind-map-link">
+        <a href="/new.html" class="new-mind-map-link" aria-label="Create a New Mind Map">
             <svg
                 height="18"
                 width="18"
@@ -174,7 +174,7 @@
                     class="input"
                     id="prompt"
                     placeholder="Visualize anything..."/>
-                <button id="generate-mindmap-btn" class="send-prompt-btn">
+                <button id="generate-mindmap-btn" class="send-prompt-btn" aria-label="Generate Mind Map">
                     <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#FFFFFF"><path d="M166.67-179.67Q150-173 135-182.5T120-210v-193.33L428-480l-308-78v-192q0-18 15-27.5t31.67-2.83l640 269.33Q827-502 827-480t-20.33 31l-640 269.33Z"/></svg>
                 </button>
             </div>
