Use the new statistics API endpoint

--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@
       container.style.animation = `scroll ${duration}s linear infinite`;
     }
     createCategoryBadges();
-    const apiUrl = "https://abacus.jasoncameron.dev/get/mindmapwizard.com/mind-map-generated";
+    const apiUrl = "https://stats.mindmapwizard.com/get/mmw/mind-map-generated";
     let currentValue = 0;
   
     function animateValue(element, start, end, duration) {
