--- a/index.html
+++ b/index.html
@@ -222,13 +222,16 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="reasoning-toggle-container" style="margin-top: 12px;">
-                <label for="reasoning-toggle" style="display: flex; align-items: center; gap: 8px; cursor: pointer; font-size: 0.9em; color: var(--text-color);">
-                    <input type="checkbox" id="reasoning-toggle" style="margin: 0;">
-                    <span>Disable Reasoning</span>
-                </label>
+                
+                <div class="reasoning-toggle-container">
+                    <label for="reasoning-toggle" class="reasoning-toggle-label">
+                        <span class="toggle-switch">
+                            <input type="checkbox" id="reasoning-toggle">
+                            <span class="toggle-slider"></span>
+                        </span>
+                        <span class="toggle-text">Reasoning</span>
+                    </label>
+                </div>
             </div>
             
             <div
